Ajustes en portal y app

--- a/portal/portal/templates/ziip.html
+++ b/portal/portal/templates/ziip.html
@@ -1,6 +1,11 @@
 {% load imagenTipo %}
 <section class="site-content site-section">
     <div class="container">
+
+
+
+
+
         <div class="table-responsive">
             <table class="table table-bordered table-vcenter">
 
@@ -12,7 +17,7 @@
                             <a href="/anonimo" >{{"1"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/anonimo" class="acciones">Mensaje Anonimo</a>
+                         <h2> <strong><a href="/anonimo" class="acciones">Mensaje Anonimo</a></strong></h2>
                         </td>
 
                     </tr>
@@ -22,7 +27,7 @@
                             <a href="/conecta">{{"2"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/conecta" class="acciones">Conecta</a>
+                           <h2> <strong><a href="/conecta" class="acciones">Conecta</a></strong></h2>
                         </td>
 
                     </tr>
@@ -31,7 +36,7 @@
                             <a href="/celestino">{{"3"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/celestino" class="acciones">Celestino</a>
+                          <h2> <strong> <a href="/celestino" class="acciones">Celestino</a></strong></h2>
                         </td>
 
                     </tr>
@@ -40,6 +45,5 @@
                 </tbody>
             </table>
         </div>
-
     </div>
 </section>
