--- a/Ziip/Ziip/Base.lproj/Main.storyboard
+++ b/Ziip/Ziip/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -331,7 +331,7 @@
                                         <rect key="frame" x="0.0" y="22" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HcB-rN-DFJ" id="0gw-GZ-Lmj">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="hUJ-ia-34h">
@@ -835,7 +835,7 @@
                                                         <rect key="frame" x="0.0" y="1" width="282" height="50"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="00D-Yi-A9e" id="rrp-eq-cZh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="282" height="49"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="282" height="49.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label bla bla3" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wat-8q-bfI">
@@ -903,6 +903,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
+                            <searchBar contentMode="redraw" id="zFF-AH-NrV">
+                                <rect key="frame" x="0.0" y="114" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                                <connections>
+                                    <outlet property="delegate" destination="PUf-sL-v9d" id="4lg-i5-eLk"/>
+                                </connections>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="40" sectionHeaderHeight="22" sectionFooterHeight="22" id="9qe-WL-Uxe">
                                 <rect key="frame" x="0.0" y="158" width="320" height="322"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -944,18 +956,6 @@
                                     <outlet property="delegate" destination="PUf-sL-v9d" id="ago-pR-FJp"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" id="zFF-AH-NrV">
-                                <rect key="frame" x="0.0" y="114" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <scopeButtonTitles>
-                                    <string>Title</string>
-                                    <string>Title</string>
-                                </scopeButtonTitles>
-                                <connections>
-                                    <outlet property="delegate" destination="PUf-sL-v9d" id="4lg-i5-eLk"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="0.94117647059999998" green="0.90980392160000001" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -997,7 +997,7 @@
                                                 <rect key="frame" x="0.0" y="22" width="227" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Co-DS-wgM" id="X3Y-Gb-x7E">
-                                                    <rect key="frame" x="0.0" y="0.0" width="227" height="43"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="227" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PpJ-Wq-E12">
@@ -1034,10 +1034,10 @@
             </objects>
             <point key="canvasLocation" x="3098" y="-1074"/>
         </scene>
-        <!--Mensaje Anonimo-->
+        <!--Mensaje-->
         <scene sceneID="VKu-i1-Xln">
             <objects>
-                <viewController id="nK7-DU-Lxn" customClass="MensajeAnonimoViewController" sceneMemberID="viewController">
+                <viewController title="Mensaje" id="nK7-DU-Lxn" customClass="MensajeAnonimoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lyA-oy-7IG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1096,7 +1096,7 @@
                                                         <rect key="frame" x="0.0" y="1" width="376" height="50"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CYq-El-poI" id="9hp-rf-9Nh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="376" height="49"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="376" height="49.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label bla bla3" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mJg-rZ-qLO">
@@ -1726,11 +1726,11 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Gtu-9M-Zb3"/>
-        <segue reference="YUE-xY-mHJ"/>
-        <segue reference="RWi-iM-9ba"/>
-        <segue reference="lOv-0W-s0Z"/>
-        <segue reference="qk4-eU-Rmq"/>
         <segue reference="BEb-DR-460"/>
+        <segue reference="qk4-eU-Rmq"/>
+        <segue reference="DSs-sb-OBI"/>
+        <segue reference="YUE-xY-mHJ"/>
+        <segue reference="vc9-zP-rAS"/>
+        <segue reference="ui9-uc-q8X"/>
     </inferredMetricsTieBreakers>
 </document>
