--- a/portal/portal/media/css/custom.css
+++ b/portal/portal/media/css/custom.css
@@ -8,5 +8,38 @@ a:focus,
 }
 
 a.acciones {
-color: #000000;    
+color: #8251A1;
+}
+.widget {
+    background-color: #000000;
+}
+
+.site-content {
+    background-color: #F2EDF9;
+}
+
+.footer-heading {
+    color: #F2EDF9;
+}
+
+.site-nav a {
+color: #F2EDF9;
+}
+
+h1 {
+color: #F2EDF9;
+}
+
+
+.btn-primary {
+    background-color: #8251A1;
+
+}
+
+
+.switch input:checked + span {
+    background-color: #8251A1;
+}
+.switch-primary span {
+    border-color: #8251A1;
 }
