--- a/portal/portal/templates/ajustes.html
+++ b/portal/portal/templates/ajustes.html
@@ -32,7 +32,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 {%if usuario.imagen %}
-                                <img src="{{usuario.imagen}}">
+                                <img src="{{usuario.imagen}}" width="100px" height="100px">
                                 {% endif %}
                                 <input type="file" id="imagen" name="imagen" class="form-control input-lg">
                             </div>
