--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -56,7 +56,8 @@
 <script src="js/chat.js"></script>
 <script>
         $(document).ready(function() {
-                loginChat('{{usuario.usuario}}', '{{usuario.token}}');
+                //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}');
+                loginChat('{{usuario.usuario}}', '1234');
         });
 </script>
 
