--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -53,6 +53,8 @@
 {% if seccion_activa == "chat" %}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="js/socket.io.js"></script>
+<script src="js/underscore-min.js"></script>
+<script src="js/handlebars-1.0.rc.1.js"></script>
 <script src="js/chat.js"></script>
 <script>
         $(document).ready(function() {
