--- a/portal/portal/templates/footer.html
+++ b/portal/portal/templates/footer.html
@@ -4,12 +4,11 @@
 
 <div id="page-content" >
 </div>
-
 <footer class="clearfix">
 
-    <div class="pull-left">
-        <span id="year-copy">2015</span> &copy; <a href="http://ziip.es" target="_blank">Ziip.es</a>
-    </div>
+   <div class="pull-left">
+       <span id="year-copy">2015 © </span><a href="http://ziip.es/" target="_blank">Ziip.es</a>
+   </div>
 </footer>
 
 
