--- a/portal/portal/media2/js/templates/room_tab.handlebars
+++ b/portal/portal/media2/js/templates/room_tab.handlebars
@@ -1,4 +1,4 @@
-<a href="javascript:void(0)" class="list-group-item active">
+<a href="javascript:activateTab({{user.id}})" class="list-group-item chat-room" data-id="{{user.id}}">
     <span class="badge"></span>
     <img src="{{user.imagen}}" alt="Avatar" class="img-circle">
     <h5 class="list-group-item-heading"><strong>{{user.username}}</strong> </h5>
