--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -55,13 +55,28 @@
 <script src="js/socket.io.js"></script>
 <script src="js/underscore-min.js"></script>
 <script src="js/handlebars-1.0.rc.1.js"></script>
+<script src="js/moment.js"></script>
+<!--
+<script src="js/scrollPane.js"></script>
+
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/app.js"></script>
+
+<script src="js/pages/readyChat.js"></script>
+-->
+
 <script src="js/chat.js"></script>
 <script>
         $(document).ready(function() {
-                //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}');
-                loginChat('{{usuario.usuario}}', '1234');
+            //ReadyChat.init();
+            //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}', '{{usuario.imagen}}');
+            loginChat('{{usuario.usuario}}', '1234', '{{usuario.imagen}}');
         });
+
+
 </script>
+    <!--<script>$(function(){ ReadyChat.init(); });</script>-->
 
 {%endif%}
 
