--- a/portal/portal/templates/chat.html
+++ b/portal/portal/templates/chat.html
@@ -7,11 +7,11 @@
     <!-- END Title -->
 
     <!-- Content -->
-    <div class="chatui-container block-content-full" style="height: 600px;">
+    <div class="chatui-container block-content-full" style="height: 350px;">
         <!-- People -->
-        <div class="chatui-people themed-background-dark" style="height: 600px;">
-            <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 600px;"><div class="chatui-people-scroll" style="height: 600px; overflow: hidden; width: auto;">
-                <div class="list-group" id="lista_usuarios">
+        <div class="chatui-people themed-background-dark" style="height: 350px;">
+            <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 350px;"><div class="chatui-people-scroll" style="height: 600px; overflow: hidden; width: auto;">
+                <div class="list-group" id="lista_usuarios" style=" overflow: scroll;">
 
                 </div>
                 <!-- END Online -->
@@ -20,9 +20,10 @@
         <!-- END People -->
 
         <!-- Talk -->
-        <div class="chatui-talk" style="height: 550px;">
-            <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 550px;"><div class="chatui-talk-scroll" style="height: 550px; overflow: hidden; width: auto;">
-                <ul>
+        <div class="chatui-talk" style="height: 300px;">
+            <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 300px;">
+                <div class="chatui-talk-scroll" style="height: 300px; overflow: scroll; width: auto;">
+                <ul id="lista-mensajes">
                     <li class="text-center"><small>yesterday, 23:10</small></li>
                     <li class="chatui-talk-msg">
                         <img src="img/placeholders/avatars/avatar6.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar"> Buenas
@@ -34,17 +35,36 @@
                     <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
                         <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
                     </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
+                    <li class="chatui-talk-msg chatui-talk-msg-highlight themed-border">
+                        <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle chatui-talk-msg-avatar">Aqui andamos
+                    </li>
                 </ul>
-            </div><div class="slimScrollBar" style="width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 550px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
+            </div>
+            <div class="slimScrollBar" style="width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 550px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
         </div>
         <!-- END Talk -->
 
         <!-- Input -->
         <div class="chatui-input">
-            <form action="page_ready_chat.html" method="post" class="form-horizontal form-control-borderless remove-margin">
+            <form id="message-form" action="page_ready_chat.html" method="post" class="form-horizontal form-control-borderless remove-margin">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-angle-right"></i></span>
-                    <input type="text" id="chatui-message" name="chatui-message" class="form-control input-lg" placeholder="Type a message and hit enter..">
+                    <input type="text" id="message-text" name="chatui-message" class="form-control input-lg" placeholder="Escribe un mensaje y pulsa enter..">
                 </div>
             </form>
         </div>
