--- a/portal/portal/templates/ziip.html
+++ b/portal/portal/templates/ziip.html
@@ -1,9 +1,12 @@
 
 {% load imagenTipo %}
-<div class="login-title text-center ">
-<img src="/img/icon57.png">
-        <h1> <strong>Ziip</strong><br><small> <strong>Enviar Mensaje</strong></small></h1>
-
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>Enviar Mensaje</strong></small></h1>
+   </div>
 </div>
 <!-- END Login Title -->
 
