Cambio en cabeceras html

--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -11,9 +11,11 @@
 </div>
 {%endif%}
 
-<div class="login-title text-center ">
-<img src="/img/icon57.png">
-
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
 {% ifequal tipo "1" %}
         <h1> <strong>Mensaje anonimo</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
 {% endifequal %}
@@ -26,7 +28,10 @@
 
 
 </div>
+</div>
 <!-- END Login Title -->
+<div class="clearfix"></div>
+
 
 <!-- Login Block -->
 <div class="block push-bit">
