--- a/portal/portal/templates/rechazoEnviado.html
+++ b/portal/portal/templates/rechazoEnviado.html
@@ -8,10 +8,16 @@
 </div>
 {%endif%}
 
-<div class="login-title text-center">
-    <h1><i class="gi gi-flash"></i> <strong>Ziip</strong><br><small> <strong>Codigo</strong></small></h1>
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>Codigo</strong></small></h1>
+   </div>
 </div>
 <!-- END Login Title -->
+<div class="clearfix"></div>
 
 <!-- Login Block -->
 <div class="block push-bit">
@@ -36,7 +42,7 @@
                 <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Aceptar</button>
             </div>
         </div>
-        
+
     </form>
     <!-- END Login Form -->
 
