--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -11,10 +11,17 @@
 </div>
 {%endif%}
 
-<div class="login-title text-center">
-    <h1><i class="gi gi-flash"></i> <strong>Ziip</strong><br><small> <strong>Registro</strong></small></h1>
+
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>Registro</strong></small></h1>
+   </div>
 </div>
 <!-- END Login Title -->
+<div class="clearfix"></div>
 
 <!-- Login Block -->
 <div class="block push-bit">
