--- a/portal/portal/templates/contactos.html
+++ b/portal/portal/templates/contactos.html
@@ -1,8 +1,14 @@
 
-<div class="login-title text-center ">
-<img src="/img/icon57.png">
-        <h1> <strong>Ziip</strong><br><small> <strong>Mis contactos</strong></small></h1>
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>Mis contactos</strong></small></h1>
+   </div>
 </div>
+<!-- END Login Title -->
+<div class="clearfix"></div>
 <div class="block push-bit">
     <form action="" method="post" id="form-login" class="form-horizontal  form-control-borderless">
         {%for contacto in contactos %}
