--- a/portal/portal/templates/reciente.html
+++ b/portal/portal/templates/reciente.html
@@ -1,10 +1,16 @@
 {% load imagenTipo %}
 
 
-<div class="login-title text-center">
-    <h1><i class="gi gi-flash"></i> <strong>Ziip</strong><br><small> <strong>Recientes</strong></small></h1>
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>Recientes</strong></small></h1>
+   </div>
 </div>
 <!-- END Login Title -->
+<div class="clearfix"></div>
 
 <!-- Login Block -->
 <div class="block push-bit">
