--- a/portal/portal/templates/textos.html
+++ b/portal/portal/templates/textos.html
@@ -1,8 +1,15 @@
 
-<div class="login-title text-center">
-    <h1><i class="gi gi-flash"></i> <strong>Ziip</strong><br><small> <strong>{{titulo}}</strong></small></h1>
+<div class="login-title">
+   <div class="logo-tittle">
+       <img src="/img/icon57.png">
+   </div>
+   <div class="txt-tittle">
+       <h1> <strong>Ziip</strong><br><small> <strong>{{titulo}}</strong></small></h1>
+   </div>
 </div>
 <!-- END Login Title -->
+<div class="clearfix"></div>
+
 
 <!-- Login Block -->
 <div class="block push-bit">
