Cambios de maquetacion

--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -13,7 +13,7 @@
 
 <div class="login-title">
    <div class="logo-tittle">
-       <img src="/img/icon57.png">
+       <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
 {% ifequal tipo "1" %}
