--- a/portal/portal/templates/ajustes.html
+++ b/portal/portal/templates/ajustes.html
@@ -13,7 +13,7 @@
 
 <div class="login-title">
    <div class="logo-tittle">
-       <img src="/img/icon57.png">
+       <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
        <h1> <strong>Ziip</strong><br><small> <strong>Ajustes</strong></small></h1>
