--- a/portal/portal/templates/contacto.html
+++ b/portal/portal/templates/contacto.html
@@ -10,7 +10,7 @@
 
 <div class="login-title">
    <div class="logo-tittle">
-       <img src="/img/icon57.png">
+       <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
        <h1> <strong>Ziip</strong><br><small> <strong>Contacto</strong></small></h1>
