--- a/portal/portal/templates/peticionEnviada.html
+++ b/portal/portal/templates/peticionEnviada.html
@@ -1,6 +1,6 @@
 <div class="login-title">
    <div class="logo-tittle">
-       <img src="/img/icon57.png">
+       <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
        <h1> <strong>Ziip</strong><br><small> <strong>Peticion enviada correctamente</strong></small></h1>
