--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -14,7 +14,7 @@
 
 <div class="login-title">
    <div class="logo-tittle">
-       <img src="/img/icon57.png">
+       <img src="/img/logo.png">
    </div>
    <div class="txt-tittle">
        <h1> <strong>Ziip</strong><br><small> <strong>Registro</strong></small></h1>
