Cambios en  recientes

--- a/portal/portal/templates/recientes.html
+++ b/portal/portal/templates/recientes.html
@@ -21,7 +21,7 @@
         <div class="form-group accion">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon recientes"><a href="#">{{reciente.tipo|imagenTipo|safe}}></a></span>
+                    <span class="input-group-addon recientes"><a href="#">{{reciente.tipo|imagenTipo|safe}}</a></span>
                    <a href="#">{{reciente.contacto_nombre}}</a>
                    <br>
                    <a href="#">{{reciente.contacto_contacto}}</a>
@@ -34,7 +34,7 @@
                    {% endifequal %}
 
                    <a href="#">{{reciente.fecha|date:"h:i d-m-Y"}}</a>
-     
+
                 </div>
             </div>
         </div>
