--- a/portal/portal/templates/head.html
+++ b/portal/portal/templates/head.html
@@ -5,7 +5,7 @@
 
 {% else %}
 
-<img src="img/placeholders/backgrounds/login_full_bg.jpg" alt="Login Full Background" class="full-bg animation-pulseSlow">
+<img src="img/background1.jpg" alt="Login Full Background" class="full-bg animation-pulseSlow">
 {% endif %}
 <!-- END Login Full Background -->
 
