Cambio en server

--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -71,7 +71,7 @@
         $(document).ready(function() {
             //ReadyChat.init();
             //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}', '{{usuario.imagen}}');
-            loginChat('{{usuario.usuario}}', '1234', '{{usuario.imagen}}');
+            loginChat('{{usuario.usuario}}', 'ulises', '{{usuario.imagen}}');
         });
 
 
