--- a/portal/portal/templates/head.html
+++ b/portal/portal/templates/head.html
@@ -1,6 +1,14 @@
 <!-- Login Full Background -->
 <!-- For best results use an image with a resolution of 1280x1280 pixels (prefer a blurred image for smaller file size) -->
 
+<div id="barritacookie" style="display: block;">
+<div id="barritaloca2">
+
+    Este sitio utiliza cookies. Si sigues navegando entendemos que estás de acuerdo.
+ <a class="barriformat1" href="javascript:void(0);" onclick="PonerCookie();"><b>OK</b></a>
+</div>
+</div>
+
 {% if seccion_activa == "chat" %}
 
 {% else %}
