--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -54,8 +54,7 @@
         </div>
         <div class="form-group">
             <div class="col-xs-12 text-center">
-                <a href="javascript:void(0)" id="link-reminder-login"><small>Forgot password?</small></a> -
-                <a href="javascript:void(0)" id="link-register-login"><small>Create a new account</small></a>
+                <a href="recordarPassword" id="link-reminder-login"><small>Recordar password</small></a>
             </div>
         </div>
     </form>
