--- a/portal/portal/templates/base.html
+++ b/portal/portal/templates/base.html
@@ -57,6 +57,8 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/app.js"></script>
+<script src="js/aviso_cookies.js"></script>
+
 
 {% if seccion_activa == "chat" %}
 <script src="js/socket.io.js"></script>
@@ -76,8 +78,10 @@
         $(document).ready(function() {
             //ReadyChat.init();
             //loginChat('{{usuario.usuario}}', '{{usuario.chatToken}}', '{{usuario.imagen}}');
+            
 
-            loginChat('{{usuario.usuario}}', '{{usuario.password}}', '{{usuario.imagen}}');
+
+            loginChat('{{usuario.usuario}}', '{{usuario.password}}', '{{usuario.imagen}}',{{open_chat}});
         });
 
 
