--- a/portal/portal/templates/footer.html
+++ b/portal/portal/templates/footer.html
@@ -5,17 +5,19 @@
 <div id="page-content" >
 </div>
 <footer class="clearfix">
-
+    <div class="pull-right">
+        <a href="/legal" target="_blank">Aviso Legal</a> -
+        <a href="/privacidad" target="_blank">Politica de privacidad</a>
+    </div>
    <div class="pull-left">
-       <span id="year-copy">2015 © </span><a href="http://ziip.es/" target="_blank">Ziip.es</a>
+       <span> 2015 &copy;</span><a href="http://ziip.es/" target="_blank">Ziip.es</a>
    </div>
+
 </footer>
 
 
 </div>
 <!-- main container-->
-
-
 
 </div>
 </div>
