--- a/portal/portal/templates/index.html
+++ b/portal/portal/templates/index.html
@@ -1,4 +1,93 @@
+<div class="block block-alt-noborder">
+    <div class="row">
+
+        <div class="col-md-12 col-lg-12 ">
+            <!-- Intro Content -->
+            <h3 class="sub-header"><strong>ziip.es</strong> es la primera aplicación de contactos anónima y GRATUITA.</h3>
+            <div id="faq1" class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title"><i class="fa fa-angle-right"></i> <a class="accordion-toggle" data-toggle="collapse" data-parent="#faq1" href="#faq1_q1">¿Que es ziip?</a></h4>
+                    </div>
+                    <div id="faq1_q1" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p>Ziip es una plataforma de comunicación, que permite a los usuarios contactar anónimamente por SMS o email, manteniendo la privacidad.
+                                TOTALMENTE GRATUITA.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><i class="fa fa-angle-right"></i> <a class="accordion-toggle" data-toggle="collapse" data-parent="#faq1" href="#faq1_q2">¿Cual es su novedad?</a></h4>
+                        </div>
+                        <div id="faq1_q2" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>No existe una aplicación similar, “el primer paso” en el inicio de una relación es muy complicado, especialmente en entornos laborales o familiares.
+                                    Permitimos a los usuarios que se comuniquen sin comprometer su privacidad, sin el uso de Facebook o cualquier red social.
+                                    Ziip es una herramienta para el primer contacto, a partir de el envío de un SMS o email (gratuito) abrimos un chat para permitir la comunicación privada.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><i class="fa fa-angle-right"></i> <a class="accordion-toggle" data-toggle="collapse" data-parent="#faq1" href="#faq1_q3">¿Cómo funciona?</a></h4>
+                        </div>
+                        <div id="faq1_q3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>
+                                    Un usuario de la plataforma, introduce un contacto (email o número de móvil), selecciona un mensaje genérico y uno personal. El genérico se enviará por SMS o email, junto con un link para ver el personal.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
-El index!!
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><i class="fa fa-angle-right"></i> <a class="accordion-toggle" data-toggle="collapse" data-parent="#faq1" href="#faq1_q4">¿Que es celestina?</a></h4>
+                        </div>
+                        <div id="faq1_q4" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>
+                                    Es habitual que entre dos compañeros de trabajo o de tu entorno social veas una atracción, Celestina es la herramienta para que tú de forma anónima los pongas en contacto.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><i class="fa fa-angle-right"></i> <a class="accordion-toggle" data-toggle="collapse" data-parent="#faq1" href="#faq1_q5">¿Podría enviar muchos mensajes al mismo móvil o email?</a></h4>
+                        </div>
+                        <div id="faq1_q5" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>
+                                    NO, nuestro objetivo ha sido prevenir cualquier tipo de acoso con las siguientes normas:
+                                    <ul>
+                                        <li>
+                                            Cualquier número de móvil o email que no sea usuario de Ziip solo puede recibir un solo mensaje de un solo usuario. El usuario “receptor” tiene 4 opciones:
+                                        </li>
+                                        <li>
+                                            Aceptar el mensaje del usuario que envía el mensaje. Con lo cual se convierte en usuario y creamos un chat privado
+                                        </li>
+                                        <li>
+                                            Rechazar al usuario que envía el mensaje. Y se abre la posibilidad de recibir nuevos mensajes.
+                                        </li>
+                                        <li>
+                                            Rechazar cualquier mensaje de ziip. Nunca volverá ser solicitado, a no ser que lo decida o cambie de opinión voluntariamente.
+                                        </li>
+                                        <li>
+                                            No contestar, manteniendo este usuario en la lista de contactos no admitidos durante 15 días.
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
