correccion en anonimo

--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -81,7 +81,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Nombre:</span>
-                    <input type="text"  name="nombre" class="form-control input-lg" placeholder="Nombre" value="{{datos.nombre}}">
+                    <input type="text"  name="nombre" class="form-control input-lg" placeholder="..." value="{{datos.nombre}}">
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Telefono:</span>
-                    <input type="text"  name="telefono" class="form-control input-lg" placeholder="Telefono" value="{{datos.telefono}}">
+                    <input type="text"  name="telefono" class="form-control input-lg" placeholder="..." value="{{datos.telefono}}">
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Email:</span>
-                    <input type="text"  name="email" class="form-control input-lg" placeholder="Email" value="{{datos.email}}">
+                    <input type="text"  name="email" class="form-control input-lg" placeholder="..." value="{{datos.email}}">
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Nombre segundo contacto:</span>
-                    <input type="text"  name="nombre2" class="form-control input-lg" placeholder="Nombre" value="{{datos.nombre2}}">
+                    <input type="text"  name="nombre2" class="form-control input-lg" placeholder="..." value="{{datos.nombre2}}">
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Telefono:</span>
-                    <input type="text"  name="telefono2" class="form-control input-lg" placeholder="Telefono" value="{{datos.telefono2}}">
+                    <input type="text"  name="telefono2" class="form-control input-lg" placeholder="..." value="{{datos.telefono2}}">
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Email:</span>
-                    <input type="text"  name="email2" class="form-control input-lg" placeholder="Email" value="{{datos.email2}}">
+                    <input type="text"  name="email2" class="form-control input-lg" placeholder="..." value="{{datos.email2}}">
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">Mensaje:</span>
-                    <textarea name="mensaje" class="form-control input-lg" placeholder="Mensaje">{{datos.mensaje}}</textarea>
+                    <textarea name="mensaje" class="form-control input-lg" placeholder="...">{{datos.mensaje}}</textarea>
                 </div>
             </div>
         </div>
