--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -28,7 +28,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
+                    <span class="input-group-addon"><i class="gi gi-user"></i></span>
                     <input type="text"  name="usuario" class="form-control input-lg" placeholder="Usuario">
                 </div>
             </div>
