--- a/portal/portal/templates/peticionEnviada.html
+++ b/portal/portal/templates/peticionEnviada.html
@@ -12,18 +12,10 @@
 <!-- Login Block -->
 <div class="block push-bit">
 
-    <!-- Login Form -->
-    <form action="" method="post" id="form-login" class="form-horizontal form-bordered form-control-borderless">
-        <div class="form-group">
-            <div class="col-xs-12">
-                <div class="input-group">
-                     <h1>Petición enviada correctamente</h1>
 
-                </div>
-            </div>
-        </div>
-    </form>
-    <!-- END Login Form -->
+    <div class="enviado">
+           <h1>Petición enviada correctamente</h1>
+       </div>
 
 </div>
 <!-- END Login Block -->
