--- a/portal/portal/templates/peticion.html
+++ b/portal/portal/templates/peticion.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
             <div class="col-xs-12">
-                    <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver menaje privado</a><br>
+                    <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver mensaje privado</a><br>
             </div>
             <div class="col-xs-12">
                     <a href="rechazarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar Contacto</a><br>
