--- a/portal/portal/templates/peticion.html
+++ b/portal/portal/templates/peticion.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group botones-mensaje">
             <div class="col-xs-12">
                     <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver mensaje privado</a><br>
             </div>
