--- a/portal/portal/templates/peticionPrivado.html
+++ b/portal/portal/templates/peticionPrivado.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group botones-mensaje">
 
 
                     {%if logado %}
