--- a/portal/portal/templates/peticionNoExiste.html
+++ b/portal/portal/templates/peticionNoExiste.html
@@ -1,4 +1,3 @@
-
 <div class="login-title">
    <div class="logo-tittle">
        <img src="/img/logo.png">
@@ -13,20 +12,10 @@
 <!-- Login Block -->
 <div class="block push-bit">
 
-    <!-- Login Form -->
-    <form action="" method="post" id="form-login" class="form-horizontal form-bordered form-control-borderless">
-        <div class="form-group">
-            <div class="col-xs-12">
-                <div class="input-group">
-                     <h1>No existe la petición que intenta ver</h1>
 
-                </div>
-            </div>
-        </div>
-
-        </div>
-    </form>
-    <!-- END Login Form -->
+    <div class="enviado">
+           <h1>La petición no existe</h1>
+       </div>
 
 </div>
 <!-- END Login Block -->
