--- a/portal/portal/templates/ajustes.html
+++ b/portal/portal/templates/ajustes.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         {% endif %}
-        <div class="form-group">
+        <div class="form-group ajustes">
             <div class="col-xs-12">
                 <div class="input-group">
                     {%if usuario.imagen %}
