--- a/portal/portal/templates/rechazoAceptado.html
+++ b/portal/portal/templates/rechazoAceptado.html
@@ -14,19 +14,9 @@
 <div class="block push-bit">
 
     <!-- Login Form -->
-    <form action="" method="post" id="form-login" class="form-horizontal form-bordered form-control-borderless">
-        <div class="form-group">
-            <div class="col-xs-12">
-                <div class="input-group">
-                     <h1>Peticion rechazada correctamente</h1>
-
-                </div>
-            </div>
-        </div>
-
-        </div>
-    </form>
-    <!-- END Login Form -->
+    <div class="enviado">
+           <h1>Petición rechazada correctamente</h1>
+       </div>
 
 </div>
 <!-- END Login Block -->
